// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Backdrop Closedby Any 1`] = `
<button
  data-variant="secondary"
  type="button"
  command="show-modal"
  commandfor="_r_3_"
  aria-haspopup="dialog"
>
  Åpne Dialog
</button>
<dialog
  data-placement="center"
  id="_r_3_"
  closedby="any"
  open
>
  <button
    data-icon="true"
    data-variant="tertiary"
    type="button"
    aria-label="Lukk dialogvindu"
    data-color="neutral"
    command="close"
    commandfor="_r_3_"
  >
  </button>
  <h2>
    Dialog med
    <code>
      closedby="any"
    </code>
  </h2>
  <p data-variant="default">
    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloremque obcaecati assumenda odio ducimus sunt et.
  </p>
  <p
    data-variant="default"
    data-size="sm"
  >
    Dialog footer
  </p>
</dialog>
`;

exports[`Dialog Non Modal 1`] = `
<ds-field style="width: 400px;">
  <label
    data-weight="medium"
    for="textareaundefined"
  >
    Besvarelse
  </label>
  <textarea
    id="textareaundefined"
    rows="8"
  >
  </textarea>
</ds-field>
<button
  data-variant="secondary"
  type="button"
>
  Åpne skrivetips
</button>
<dialog
  data-placement="center"
  id="_r_9_"
  open
  style="width: 300px; left: 80%;"
>
  <button
    data-icon="true"
    data-variant="tertiary"
    type="button"
    aria-label="Lukk dialogvindu"
    data-color="neutral"
    command="close"
    commandfor="_r_9_"
  >
  </button>
  <h2 style="margin-bottom: var(--ds-size-2);">
    Hva besvarelsen burde inneholde
  </h2>
  <ul>
    <li>
      intro til prosjektet
    </li>
    <li>
      oversikt over hva som er gjort i prosjektet
    </li>
    <li>
      beskrivelse av prosjektmålene
    </li>
    <li>
      metode for å oppnå prosjektmålene
    </li>
    <li>
      leveranse
    </li>
  </ul>
</dialog>
`;

exports[`Dialog With Form 1`] = `
<button
  data-variant="primary"
  type="button"
  command="show-modal"
  commandfor="_r_5_"
  aria-haspopup="dialog"
>
  Send inn skjema
</button>
<dialog
  data-placement="center"
  id="_r_5_"
  closedby="any"
  open
>
  <button
    data-icon="true"
    data-variant="tertiary"
    type="button"
    aria-label="Lukk dialogvindu"
    data-color="neutral"
    command="close"
    commandfor="_r_5_"
  >
  </button>
  <h2 style="margin-bottom: var(--ds-size-2);">
    Skjemainnsending
  </h2>
  <ds-field>
    <label
      data-weight="medium"
      for="components-dialog--dialog-with-form"
    >
      Navn
    </label>
    <div>
      <input
        autofocus="true"
        id="components-dialog--dialog-with-form"
        type="text"
        value
      >
    </div>
  </ds-field>
  <div style="display: flex; gap: var(--ds-size-2); margin-top: var(--ds-size-4);">
    <button
      data-variant="primary"
      type="button"
    >
      Send inn skjema
    </button>
    <button
      data-variant="secondary"
      type="button"
      data-command="close"
    >
      Avbryt
    </button>
  </div>
</dialog>
`;

exports[`Dialog With Max Width 1`] = `
<button
  data-variant="secondary"
  type="button"
  command="show-modal"
  commandfor="_r_6_"
  aria-haspopup="dialog"
>
  Åpne Dialog
</button>
<dialog
  data-placement="center"
  id="_r_6_"
  open
  style="max-width: 1200px;"
>
  <button
    data-icon="true"
    data-variant="tertiary"
    type="button"
    aria-label="Lukk dialogvindu"
    data-color="neutral"
    command="close"
    commandfor="_r_6_"
  >
  </button>
  <h2 style="margin-bottom: var(--ds-size-2);">
    Dialog som er veldig bred
  </h2>
  <p data-variant="default">
    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloremque obcaecati assumenda odio ducimus sunt et.
  </p>
</dialog>
`;

exports[`Dialog With Open Prop 1`] = `
<button
  data-variant="primary"
  type="button"
>
  Open Dialog with prop
</button>
<dialog
  data-placement="center"
  id="_r_2_"
  open
>
  <button
    data-icon="true"
    data-variant="tertiary"
    type="button"
    aria-label="Lukk dialogvindu"
    data-color="neutral"
    command="close"
    commandfor="_r_2_"
  >
  </button>
  <p
    data-variant="default"
    data-size="sm"
  >
    Dialog subtittel
  </p>
  <h2 style="margin-bottom: var(--ds-size-2);">
    Dialog header
  </h2>
  <p
    data-variant="default"
    style="margin-bottom: var(--ds-size-2);"
  >
    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloremque obcaecati assumenda odio ducimus sunt et.
  </p>
  Dialog footer
</dialog>
`;

exports[`Dialog With Suggestion 1`] = `
<button
  data-variant="secondary"
  type="button"
  command="show-modal"
  commandfor="_r_7_"
  aria-haspopup="dialog"
>
  Åpne Dialog
</button>
<dialog
  data-placement="center"
  id="_r_7_"
  open
  style="overflow: visible;"
>
  <button
    data-icon="true"
    data-variant="tertiary"
    type="button"
    aria-label="Lukk dialogvindu"
    data-color="neutral"
    command="close"
    commandfor="_r_7_"
  >
  </button>
  <div>
    <h2>
      Dialog med innhold utenfor
    </h2>
  </div>
  <div>
    <ds-field>
      <label
        data-weight="medium"
        for="undefined-input"
      >
        Velg en kommune
      </label>
      <ds-suggestion>
        <input
          placeholder=" "
          id="undefined-input"
          type="text"
          data-label
          list=":u-datalist1"
          aria-label="​​​​​"
          popovertarget=":u-datalist1"
          aria-autocomplete="list"
          aria-controls=":u-datalist1"
          aria-expanded="true"
          autocomplete="off"
          role="combobox"
        >
        <del
          aria-label="Tøm"
          hidden
          role="button"
        >
        </del>
        <u-datalist
          popover="manual"
          data-nofilter
          data-sr-plural="%d forslag"
          data-sr-singular="%d forslag"
          hidden
          role="listbox"
          tabindex="-1"
          aria-multiselectable="false"
          id=":u-datalist1"
        >
          <u-option
            label="Sogndal"
            value="Sogndal"
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Sogndal
            <div>
              Kommune
            </div>
          </u-option>
          <u-option
            label="Oslo"
            value="Oslo"
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Oslo
            <div>
              Kommune
            </div>
          </u-option>
          <u-option
            label="Brønnøysund"
            value="Brønnøysund"
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Brønnøysund
            <div>
              Kommune
            </div>
          </u-option>
          <u-option
            label="Stavanger"
            value="Stavanger"
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Stavanger
            <div>
              Kommune
            </div>
          </u-option>
          <u-option
            label="Trondheim"
            value="Trondheim"
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Trondheim
            <div>
              Kommune
            </div>
          </u-option>
          <u-option
            label="Bergen"
            value="Bergen"
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Bergen
            <div>
              Kommune
            </div>
          </u-option>
          <u-option
            label="Lillestrøm"
            value="Lillestrøm"
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Lillestrøm
            <div>
              Kommune
            </div>
          </u-option>
        </u-datalist>
      </ds-suggestion>
    </ds-field>
  </div>
  <div style="display: flex; gap: var(--ds-size-2);">
    <button
      data-variant="primary"
      type="button"
    >
      Send inn
    </button>
    <button
      data-variant="secondary"
      type="button"
      data-command="close"
    >
      Avbryt
    </button>
  </div>
</dialog>
`;

exports[`Drawer 1`] = `
<div style="display: flex; flex-direction: column; align-items: center;">
  <ds-field
    data-clickdelegatefor="modal-checkbox"
    style="margin-bottom: var(--ds-size-4);"
  >
    <input
      id="modal-checkbox"
      type="checkbox"
      checked
    >
    <label
      data-weight="regular"
      for="modal-checkbox"
    >
      Modal
    </label>
  </ds-field>
  <fieldset>
    <div style="display: flex; flex-wrap: wrap; gap: var(--ds-size-5); margin-bottom: var(--ds-size-8);">
      <ds-field data-clickdelegatefor="center-radio">
        <input
          id="center-radio"
          type="radio"
          value="center"
          name="drawer"
        >
        <label
          data-weight="regular"
          for="center-radio"
        >
          Midten
        </label>
      </ds-field>
      <ds-field data-clickdelegatefor="top-radio">
        <input
          id="top-radio"
          type="radio"
          value="top"
          name="drawer"
        >
        <label
          data-weight="regular"
          for="top-radio"
        >
          Topp
        </label>
      </ds-field>
      <ds-field data-clickdelegatefor="bottom-radio">
        <input
          id="bottom-radio"
          type="radio"
          value="bottom"
          name="drawer"
        >
        <label
          data-weight="regular"
          for="bottom-radio"
        >
          Bunn
        </label>
      </ds-field>
      <ds-field data-clickdelegatefor="left-radio">
        <input
          id="left-radio"
          type="radio"
          value="left"
          name="drawer"
        >
        <label
          data-weight="regular"
          for="left-radio"
        >
          Venstre
        </label>
      </ds-field>
      <ds-field data-clickdelegatefor="right-radio">
        <input
          id="right-radio"
          type="radio"
          value="right"
          name="drawer"
        >
        <label
          data-weight="regular"
          for="right-radio"
        >
          Høyre
        </label>
      </ds-field>
    </div>
  </fieldset>
  <button
    data-variant="primary"
    type="button"
    command="show-modal"
    commandfor="_r_a_"
    aria-haspopup="dialog"
  >
    Open Dialog
  </button>
  <dialog
    data-placement="bottom"
    id="_r_a_"
    closedby="any"
    open
    style="z-index: 10;"
  >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="button"
      aria-label="Lukk dialogvindu"
      data-color="neutral"
      command="close"
      commandfor="_r_a_"
    >
    </button>
    <div>
      <p data-variant="default">
        This is a modal Dialog with
        <code>
          placement="bottom"
        </code>
      </p>
    </div>
  </dialog>
</div>
`;

exports[`Preview 1`] = `
<div>
  <button
    data-variant="primary"
    type="button"
    command="show-modal"
    commandfor="_r_0_"
    aria-haspopup="dialog"
  >
    Åpne Dialog
  </button>
  <dialog
    data-placement="center"
    id="_r_0_"
    closedby="any"
    open
    style="z-index: 10;"
  >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="button"
      aria-label="Lukk dialogvindu"
      data-color="neutral"
      command="close"
      commandfor="_r_0_"
    >
    </button>
    <h2 style="margin-bottom: var(--ds-size-2);">
      Dialog header
    </h2>
    <p
      data-variant="default"
      style="margin-bottom: var(--ds-size-2);"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloremque obcaecati assumenda odio ducimus sunt et.
    </p>
    <p
      data-variant="default"
      data-size="sm"
    >
      Dialog footer
    </p>
  </dialog>
</div>
`;

exports[`With Header And Footer 1`] = `
<button
  data-variant="primary"
  type="button"
  command="show-modal"
  commandfor="_r_4_"
  aria-haspopup="dialog"
>
  Gå til neste
</button>
<dialog
  data-placement="center"
  id="_r_4_"
  open
>
  <button
    data-icon="true"
    data-variant="tertiary"
    type="button"
    aria-label="Lukk dialogvindu"
    data-color="neutral"
    command="close"
    commandfor="_r_4_"
  >
  </button>
  <div>
    <p
      data-variant="default"
      data-size="sm"
    >
      Undertittel
    </p>
    <h2>
      Dette må du vite før du går videre
    </h2>
  </div>
  <div>
    <p
      data-variant="default"
      style="margin-bottom: var(--ds-size-2);"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sodales eros justo. Aenean non mi ipsum. Cras viverra elit nec vulputate mattis. Nunc placerat euismod pulvinar. Sed nec fringilla nulla, sit amet ultricies ante. Morbi egestas venenatis massa, eu interdum leo rutrum eu. Nulla varius, mi ac feugiat lacinia, magna eros ullamcorper arcu, vel tincidunt erat leo nec tortor. Sed ut dui arcu. Morbi commodo ipsum hendrerit est imperdiet imperdiet. Etiam sed maximus nisi. Quisque posuere posuere orci, non egestas risus facilisis a. Vivamus non tempus felis, in maximus lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
    </p>
    <p data-variant="default">
      Etiam nec tincidunt est. Integer semper sodales efficitur. Pellentesque pellentesque varius leo id congue. Integer lacinia porttitor massa id euismod. Maecenas porta, magna nec interdum eleifend, risus magna condimentum neque, a gravida nisl risus a elit. Donec accumsan metus et lectus placerat varius. Donec tristique odio arcu. Donec cursus leo a dui auctor pulvinar. Sed in elit urna. Nunc vitae magna sed nibh elementum dignissim et ut massa.
    </p>
  </div>
  <div>
    Footer
  </div>
</dialog>
`;

exports[`Without Dialog Trigger Context 1`] = `
<button
  data-variant="secondary"
  type="button"
>
  Åpne Dialog
</button>
<dialog
  data-placement="center"
  id="_r_1_"
  open
>
  <button
    data-icon="true"
    data-variant="tertiary"
    type="button"
    aria-label="Lukk dialogvindu"
    data-color="neutral"
    command="close"
    commandfor="_r_1_"
  >
  </button>
  <p
    data-variant="default"
    data-size="sm"
  >
    Dialog subtittel
  </p>
  <h2 style="margin-bottom: var(--ds-size-2);">
    Her bruker vi
    <code>
      ref
    </code>
    for å åpne dialogen
  </h2>
  <p
    data-variant="default"
    style="margin-bottom: var(--ds-size-2);"
  >
    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloremque obcaecati assumenda odio ducimus sunt et.
  </p>
  Dialog footer
</dialog>
`;
